# DictatumLudere

./: .clang-tidy  .gitignore  CMakeLists.txt  DictatumLudere.desktop.template  Home.qml  HomeForm.ui.qml  Page1Form.ui.qml  README.md  appdata.xml  dssloader.cpp  dssloader.h  flatpak.manifest.yml  footpaddle.cpp  footpaddle.h  main.cpp  main.qml  qml.qrc
